--- a/index.html
+++ b/index.html
@@ -3,27 +3,40 @@
 	<html lang="en">
 	<head>
         	<meta charset="UTF-8">
+			<link rel="stylesheet" type="text/css" href="style.css">
         	<title>My Resume</title>
 	</head>
 	<body>
+		
+		<nav id="navbar">
+		<div id="navbar-container">
+			<ul>
+				<li><a href="index.html" title="Resume">
+					Resume
+				</a></li>
+				<li><a href="page1.html" title="About Me">
+					About Me
+				</a></li>
+				<li><a href="page2.html" title="Background">
+					Background
+				</a></li>
+			</ul>
+		</div>
+	</nav>
+	<div class="main">
 		<H1>
-		<strong>
-			Resume
-		</strong>
+			<strong>
+				Resume
+			</strong>
 		</H1>
 		
-		<a href="index.html">Resume</a>
-		<a href="page1.html">Page 1</a>
-		<a href="page2.html">Page 2</a>
-		
-		<p>Education:</p>
-	
+		<H2>Education:</H2>
 		<p> Southern Illinois University</p>					              	                 
 		<p>Carbondale, IL</p>
 		<p>Bachelor of Science in Marketing</p>                                                    
 		<p>Dec2011</p>  
 
-		<p>	Work History:</p>	
+		<H2>	Work History:</H2>	
 	
 		<p>Chicago Police Department<p>					        	                   
 		<p>Chicago, IL<p>
@@ -55,9 +68,10 @@
 			<li>Responsible for the communication with the sales and marketing teams to design marketing programs.</li>
 			<li>Acquired extensive knowledge regarding marketing and sales support.</li>
 		</ul>
-		<p>Skills:</p>
+		<H2>Skills:</H2>
 		<p>Bilingual – Spanish</p>
 		<p>Extensive PC and Internet experience</p>
 		<p>Working knowledge of Microsoft Word software application	</p>
+		</div>
 	</body>
 </html>
