--- a/page1.html
+++ b/page1.html
@@ -4,6 +4,7 @@
 
 		<head>
         		<meta charset="UTF-8">
+				<link rel="stylesheet" type="text/css" href="style.css">
         		<title>Manuel Ayala</title>
 		</head>
 		<body>
