--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 			<strong>
 				Resume
 			</strong>
-		</H1>
+		</h1>
 		
-		<H2>Education:</H2>
+		<h2>Education:</h2>
 		<p> Southern Illinois University</p>					              	                 
 		<p>Carbondale, IL</p>
 		<p>Bachelor of Science in Marketing</p>                                                    
 		<p>Dec2011</p>  
 
-		<H2>	Work History:</H2>	
+		<h2>	Work History:</h2>	
 	
 		<p>Chicago Police Department<p>					        	                   
 		<p>Chicago, IL<p>
