--- a/Family&Work (1).html
+++ b/Family&Work (1).html
@@ -12,8 +12,8 @@
 			About Me
 		</h1>
 		<a href="../index.html">Resume</a>
-		<a href="page1.html">Page 1</a>
-		<a href="page2.html">Page 2</a>
+		<a href="page1.html">About ME</a>
+		<a href="page2.html">Family & Work</a>
 		
 		<h2>
 		Family
