--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
         	<meta charset="UTF-8">
 			<link rel="stylesheet" type="text/css" href="style.css">
+			<link rel="stylesheet" type="text/css" href="normalize.css">
         	<title>My Resume</title>
 	</head>
 	<body>
