--- a/page2.html
+++ b/page2.html
@@ -4,17 +4,29 @@
 
 	<head>
         <meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="normalize.css">
         <title>Manuel Ayala</title>		
 	</head>
 	<body>
+		<nav id="navbar">
+		<div id="navbar-container">
+			<ul>
+				<li><a href="index.html" title="Resume">
+					Resume
+				</a></li>
+				<li><a href="page1.html" title="About Me">
+					About Me
+				</a></li>
+				<li><a href="page2.html" title="Background">
+					Background
+				</a></li>
+			</ul>
+		</div>
+	</nav>
 		<H1>
 			About Me
 		</H1>
-		<a href="../index.html">Resume</a>
-		<a href="page1.html">Page 1</a>
-		<a href="page2.html">Page 2</a>
-		
 		<H2>
 		Family
 		</H2>
