--- a/page1.html
+++ b/page1.html
@@ -23,6 +23,7 @@
 				</a></li>
 			</ul>
 		</div>
+		<div class="main">
 	</nav>
 			<H2>About me</H2>
 			<H4>
@@ -63,5 +64,6 @@
 				I was away from home and at times I was home sick but I kept busy by studying at the library. After graduating I worked for a health insurance 
 				company then I took the entrance exam for Chicago Police which is where I currently work. 
 			</p>
+			<div class="main">
 		</body>
 	</html>
