--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,7 @@
 			</ul>
 		</div>
 	</nav>
+	<div class="main">
 		<H1>
 			About Me
 		</H1>
@@ -53,5 +54,6 @@
 			<img src="../docs/couple.jpg" alt="couple">
 			<img src="../docs/police.jpg" alt="police">
 		</p>
+		<div class="main">
 	</body>
 </html>
