--- a/index.html
+++ b/index.html
@@ -32,24 +32,25 @@
 		</h1>
 		
 		<h2>Education:</h2>
-		<p> Southern Illinois University</p>					              	                 
-		<p>Carbondale, IL</p>
-		<p>Bachelor of Science in Marketing</p>                                                    
-		<p>Dec2011</p>  
-
-		<h2>	Work History:</h2>	
-	
-		<p>Chicago Police Department<p>					        	                   
+		<div class="resume">
+			<h2> Southern Illinois University,</h2>					              	                 
+			<p>Carbondale, IL</p>
+			<h2>Bachelor of Science in Marketing</h2>                                                    
+			<p>December 2011</p>  
+		</div>
+		<h2>Work History:</h2>	
+		<div class="resume">
+		<h2>Chicago Police Department,</h2>					        	                   
 		<p>Chicago, IL<p>
-		<p>Job Title: Police Officer</p>       		               	                                 
-		<p>Oct2012  to Present</p>
+		<h2>Job Title: Police Officer</h2>       		               	                                 
+		<p>October 2012 to Present</p>
 		<ul>
 			<li>Maintains proficiency in the use of police related equipment, appears in court, and is available to testify in matters which the officer has knowledge of whether it be criminal or civil.</li>
 			<li>Investigates crimes, interviews witnesses, victims, and suspects; provides feedback to the appropriate people concerning case status; collects and documents evidence and then prepares a variety of written and oral reports.</li>
 			<li>Responds to emergency radio calls and investigates accidents, robberies, civil disturbances, domestic disputes, fights, drunkenness, missing persons, prowlers, abuse of drugs, etc. </li>
 			<li>Observes, reports and acts upon conditions conducive to crime and danger such as checking buildings, assisting other officers, enforcing traffic, making arrests, transporting prisoners and investigating crimes.</li>
 		</ul>  	                                                                                        
-		<p>United Security Life & Health</p>					        	 	         <p> Bedford Park, IL</p>                                                                               
+		<h2>United Security Life & Health</h2>					        	 	         <p> Bedford Park, IL</p>                                                                               
 		<p>Marketing Manager</p>
 		<p>Jan12 to Oct12</p>
 		<ul>	               	                               
@@ -59,7 +60,7 @@
 			<li>Consulted on the most effective cover for a particular need, while taking a number of factors into account and delivered sharp customer service by responding promptly to queries and concerns from clients and brokers.</li>
 		</ul>
 		
-		<p> Follett Higher Education Group</p>                                                                                      <p>Oak Brook, Illinois</p>
+		<h2> Follett Higher Education Group</h2>                                                                                      <p>Oak Brook, Illinois</p>
         	<p>Mailroom Clerk</p>  
         	<p> Oct07 to Jan10 </p>  
 		<ul>																									  
@@ -69,10 +70,14 @@
 			<li>Responsible for the communication with the sales and marketing teams to design marketing programs.</li>
 			<li>Acquired extensive knowledge regarding marketing and sales support.</li>
 		</ul>
+		</div>
+		
 		<H2>Skills:</H2>
+		<div class="resume">
 		<p>Bilingual – Spanish</p>
 		<p>Extensive PC and Internet experience</p>
 		<p>Working knowledge of Microsoft Word software application	</p>
+		</div>
 		</div>
 	</body>
 </html>
