--- a/page1.html
+++ b/page1.html
@@ -23,12 +23,13 @@
 				</a></li>
 			</ul>
 		</div>
-		<div class="main">
 	</nav>
-			<H2>About me</H2>
-			<H4>
+		<div class="main">
+			<H1>About me</H1>
+			<div class="resume">
+			<H2>
 				Early Years
-			</H4>
+			</H2>
 	
 			<p>
 				I was born in Durango, Mexico and arrived in the United States in the mid 1990's. I grew up in the McKinley Park
@@ -39,9 +40,9 @@
 				was in the back of the newspaper. I would also take a look at the weather, which wasn't always accurate. 
 			</p>
 	
-			<H4>
+			<H2>
 				High School Years
-			</H4>
+			</H2>
 	
 			<p>
 				I attended Thomas Kelly High School in my neighborhood, it is located at the corner of Archer Ave and California ave, 
@@ -49,12 +50,11 @@
 				provided a great opportinity to meet new friends and travel to different parts of the city when we would play our
 				opponents. My favorite subject in high school was history, I was particularly interested in the American Revolution period and 
 				the roaring 20's. I originally wanted to be a history professor since I felt that was something I enjoyed. 
-
 			</p>
 	
-			<H4>
+			<H2>
 				Young Adulthood
-			</H4>
+			</H2>
 	
 			<p>
 				After graduating high school I enrolled at the City Colleges of Chicago, I took classes at Harold Washington College, Richard Daley College
@@ -64,6 +64,7 @@
 				I was away from home and at times I was home sick but I kept busy by studying at the library. After graduating I worked for a health insurance 
 				company then I took the entrance exam for Chicago Police which is where I currently work. 
 			</p>
-			<div class="main">
+			</div>
+			</div>
 		</body>
 	</html>
