--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
 	</nav>
 	<div class="main">
 		<H1>
-			About Me
+			My Background
 		</H1>
 		<H2>
 		Family
@@ -50,10 +50,10 @@
 		
 		
 		<p>
-			<img src="../docs/family.jpg" alt="family">
+			<div class="img1"><img src="../docs/family.jpg" alt="family">
 			<img src="../docs/couple.jpg" alt="couple">
-			<img src="../docs/police.jpg" alt="police">
+			<img src="../docs/police.jpg" alt="police"></div>
 		</p>
-		<div class="main">
+		</div>
 	</body>
 </html>
