--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         	<meta charset="UTF-8">
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<link rel="stylesheet" type="text/css" href="normalize.css">
+			<script src="js/noclick.js"></script>
         	<title>My Resume</title>
 	</head>
 	<body>
