--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
         	<meta charset="UTF-8">
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<link rel="stylesheet" type="text/css" href="normalize.css">
-			<script src="../../js/noclick.js"></script>
+			<script src="../js/noclick.js"></script>
         	<title>Manuel Ayala</title>
 		</head>
 		<body>
