--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 
 	<head>
         <meta charset="UTF-8">
-		<<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<script src="../js/noclick.js"></script>
         <title>Manuel Ayala</title>		
