mass upload for file changes
upload to fix incorrect changes made to the reoisutiry

--- a/page1.html
+++ b/page1.html
@@ -4,9 +4,9 @@
 
 		<head>
         	<meta charset="UTF-8">
-			<link rel="stylesheet" type="text/css" href="style.css">
-			<link rel="stylesheet" type="text/css" href="normalize.css">
-			<script src="../js/noclick.js"></script>
+			<link rel="stylesheet" type="text/css" href="style/style.css">
+			<link rel="stylesheet" type="text/css" href="style/normalize.css">
+			<script src="js/noclick.js"></script>
         	<title>Manuel Ayala</title>
 		</head>
 		<body>
@@ -21,6 +21,9 @@
 				</a></li>
 				<li><a href="page2.html" title="Background">
 					Background
+				</a></li>
+				<li><a href="maps.html" title="My Map">
+					My Map
 				</a></li>
 			</ul>
 		</div>
