--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<html lang="en">
 	<head>
         	<meta charset="UTF-8">
-			<link rel="stylesheet" type="text/css" href="style.css">
-			<link rel="stylesheet" type="text/css" href="normalize.css">
+			<link rel="stylesheet" type="text/css" href="style/style.css">
+			<link rel="stylesheet" type="text/css" href="style/normalize.css">
 			<script src="js/noclick.js"></script>
         	<title>My Resume</title>
 	</head>
@@ -21,6 +21,9 @@
 				</a></li>
 				<li><a href="page2.html" title="Background">
 					Background
+				</a></li>
+				<li><a href="maps.html" title="My Map">
+					My Map
 				</a></li>
 			</ul>
 		</div>
