--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		
 		<H2>Skills:</H2>
 		<div class="resume">
-		<p>Bilingual – Spanish</p>
+		<p>Bilingual – Spanish Speaking</p>
 		<p>Extensive PC and Internet experience</p>
 		<p>Working knowledge of Microsoft Word software application	</p>
 		</div>
