--- a/page2.html
+++ b/page2.html
@@ -63,9 +63,9 @@
 		<div id="slide">
 			<div class="slideshow-container">
 			<div class="mySlides fade"> <img src="docs/shield.jpg" style="width:100%"> </div>
-			<div class="mySlides fade"> <img src="https://www.w3schools.com/howto/img_snow_wide.jpg" style="width:100%"> </div>
-			<div class="mySlides fade"> <img src="https://www.w3schools.com/howto/img_lights_wide.jpg" style="width:100%"> </div>
-			<div class="mySlides fade"> <img src="https://www.w3schools.com/howto/img_mountains_wide.jpg" style="width:100%"> </div>
+			<div class="mySlides fade"> <img src="docs/bears.png" style="width:100%"> </div>
+			<div class="mySlides fade"> <img src="docs/cubs.jpg" style="width:100%"> </div>
+			<div class="mySlides fade"> <img src="docs/iit.jpg" style="width:100%"> </div>
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a> <a class="next" onclick="plusSlides(1)">&#10095;</a> </div>
 				<br>
 			<div style="text-align:center"> 
@@ -77,7 +77,9 @@
 		</div>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAb8U5svMtikhdAvP3lMlurMQzbwlhiOvg&callback=initMap"
 					type="text/javascript"></script>
-
-		</div>
+			<a href="maps.html" title="My Map">
+					My Map
+				</a>
+				</div>
 	</body>
 </html>
